--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "cookie-parser": "^1.4.3",
     "cookie-session": "^2.0.0-beta.3",
     "ejs": "^2.6.1",
+    "escape-html": "^1.0.3",
     "express": "^4.16.4",
     "express-fileupload": "^0.4.0",
     "express-flash": "0.0.2",
